[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/inimigo_01.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/enemyBlue1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Effects/Explosion.png" type="Texture" id=3]
[ext_resource path="res://samples/explosion1.wav" type="Sample" id=4]
[ext_resource path="res://samples/laser5.wav" type="Sample" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource/name = "explosao"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SampleLibrary" id=3]

samples/explosao = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/tiro = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="inimigo_01" type="Area2D"]

transform/scale = Vector2( 0.6, 0.6 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.8135, 0, 0, 3.87127, 0.235634, -5.57118 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
vida = 10
pontos = 200
chanceLoot = 50

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.235634, -5.57118 )
transform/scale = Vector2( 3.8135, 3.87127 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="timer_tiro" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="tiro_pos" type="Position2D" parent="."]

transform/pos = Vector2( 0.0614548, 43.5992 )

[node name="explosao" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
texture = ExtResource( 3 )
hframes = 12

[node name="animacao" type="AnimationPlayer" parent="explosao"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explosao = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sample" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[connection signal="timeout" from="timer_tiro" to="." method="_on_timer_tiro_timeout"]


